fix: iframes going off screen

--- a/static/style.css
+++ b/static/style.css
@@ -116,6 +116,7 @@ article > p > img {
 iframe {
     display: block;
     margin: 0 auto;
+    max-width: 100%;
 }
 
 footer { margin: 0 auto 2rem; }
